Entity클래스로 테이블 만들기 / 로그로 SQL확인할 수 있는 설정

--- a/ex02/src/main/resources/application.properties
+++ b/ex02/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/boot_ex
 spring.datasource.username=bootuser
-spring.datasource.password=bootuser/
+spring.datasource.password=bootuser
 
 
+#???? ???? ???? DDL???? ??
+spring.jpa.hibernate.ddl-auto=update
+
+# ?? JPA ???? Hibernate? ????? ???? SQL? ????? ????. ???? SQL? ??? ??
+spring.jpa.properties.hibernate.format_sql=true
+
+# JPA??? ???? SQL? ??????(true) ??
+spring.jpa.show-sql=true
