local port지정, access log설정

--- a/ex02/src/main/resources/application.properties
+++ b/ex02/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-# use jpa
+#### ???? ####
+server.port=8005
+
+#### use jpa ####
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/boot_ex
 spring.datasource.username=bootuser
 spring.datasource.password=bootuser
-
 
 #???? ???? ???? DDL???? ??
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +15,22 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JPA??? ???? SQL? ??????(true) ??
 spring.jpa.show-sql=true
+
+
+#### Access log ####
+server.tomcat.basedir=.
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=ex02-logs
+server.tomcat.accesslog.pattern=%h %a %u %t "%r" %s %b %D
+
+#### ???? ####
+# ?????? ??IP ???????? ?? ????(?????) user??ID http?????????? ???????????
+
+# %h : Request protocol
+# %a : Remote IP address
+# %u : Remote user that was authenticated
+# %t : Date and time, in Common Log Format format
+# "%r" : First line of the request
+# %s : User session ID
+# %b : Bytes sent, excluding HTTP headers, or '-' if no bytes were sent
+# %D : Time taken to process the request, in millis
